# hmis

./: .env.dev  .env.example  .env_template  .gitignore  Dockerfile  LICENSE  README.md  app.py  db.sql  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  waha.setup.sh
.devcontainer/: devcontainer.json
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_roles_and_staff.py  0002_hospitals_and_super_admin.py
api/v1/: __init__.py  auth.py  hospitals.py  staff.py
app/api/v1/: __init__.py  auth.py  hospitals.py  staff.py
app/core/: config.py  exceptions.py  rbac.py  security.py
app/db/: session.py
app/models/: __init__.py  hospital.py  role.py  staff.py
app/schemas/: auth.py  hospital.py
app/services/: auth_service.py  hospital_service.py  staff_service.py
core/: config.py  rbac.py  security.py
db/: base.py  session.py
docs/: API_DESIGN.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  README.md  WORKFLOWS.md
models/: __init__.py  hospital.py  role.py  staff.py
routes/ai_help/: __init__.py
routes/consultations/: __init__.py
routes/patients/: __init__.py
routes/visits/: __init__.py
schemas/: auth.py  hospital.py
scripts/: seed_admin.py  seed_super_admin.py
services/: auth_service.py  hospital_service.py  staff_service.py
templates/: base.html  head.html  index.html  navbar.html  scripts.html  sidebar.html
templates/patients/: sick_leave.html  triage.html
templates/visits/: list.html  new.html  queue.html
tests/: test_security.py
utils/: database.py  helpers.py  models.py
